--- a/mysteriumProject/mysterium/templates/editPost.html
+++ b/mysteriumProject/mysterium/templates/editPost.html
@@ -208,17 +208,10 @@
                 <small class="form-text text-muted">Search and select tags from Wikidata.</small>
             </div>
 
-            <!-- Current Tags -->
+            <!-- Mevcut Tagler -->
             <div id="tags-container" class="mt-3">
                 <p class="text-muted">Current Tags:</p>
-                <div id="existing-tags" class="d-flex flex-wrap gap-2">
-                    {% for tag in existing_tags %}
-                    <div class="tag">
-                        {{ tag }}
-                        <button type="button" class="remove-tag btn btn-sm btn-danger ms-2" onclick="removeTag(this, '{{ tag }}')">&times;</button>
-                    </div>
-                    {% endfor %}
-                </div>
+                <div id="added-tags" class="d-flex flex-wrap gap-2"></div>
             </div>
             
             <!-- Modal Popup for Results -->
